--- a/personal-dashboard/package.json
+++ b/personal-dashboard/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.46.1",
     "chart.js": "^4.4.6",
+    "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1"
